compiler/testData/diagnostics/tests/OverridingVarByVal.diag.txt
/OverridingVarByVal.kt:12:12: error: var-property public open val v: Int defined in Val cannot be overridden by val-property public open var v: Int defined in Var
  override val v : Int = 1
           ^^^
